--- a/package.json
+++ b/package.json
@@ -1,31 +1,100 @@
 {
   "name": "docuframe",
   "version": "0.1.0",
+  "description": "A simple documentation framework with shadcn/ui",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:registry": "tsx ./scripts/build-registry.mts && prettier --log-level silent --write \"registry/**/*.{ts,tsx,mdx}\" --cache",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/lodash.template": "^4.5.3",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.451.0",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "cmdk": "^1.0.0",
+    "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.3.31",
+    "input-otp": "^1.2.4",
+    "jotai": "^2.10.0",
+    "lodash.template": "^4.5.0",
+    "lucide-react": "^0.401.0",
+    "next": "14.2.13",
+    "next-themes": "^0.3.0",
+    "posthog-js": "^1.144.2",
+    "react": "18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-resizable-panels": "^2.1.4",
+    "recharts": "^2.12.7",
+    "rimraf": "^6.0.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-morph": "^23.0.0",
+    "tsx": "^4.19.1",
+    "vaul": "^1.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@content-collections/core": "^0.7.1",
+    "@content-collections/mdx": "^0.1.5",
+    "@content-collections/next": "^0.2.2",
+    "@types/node": "^20.8.9",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "@types/unist": "^3.0.2",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^13.3.0",
+    "mdast-util-toc": "^6.1.1",
+    "prettier": "^3.3.3",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.13.2",
+    "rehype-slug": "6.0.0",
+    "remark": "^14.0.3",
+    "remark-code-import": "^1.2.0",
+    "remark-gfm": "^4.0.0",
+    "rimraf": "^5.0.7",
+    "shiki": "^1.20.0",
+    "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.11.0",
+    "typescript": "^5.3.3",
+    "unist-builder": "4.0.0",
+    "unist-util-visit": "^5.0.0"
   }
 }
