feat: added lib and types

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docuframe",
+  "name": "docsframe",
   "version": "0.1.0",
   "description": "A simple documentation framework with shadcn/ui",
   "private": true,
