--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "As simple as a NextJS documentation framework can get",
   "keywords": [
+    "chosera",
     "docsframe",
-    "documentation"
+    "documentation",
+    "shadcn-ui"
   ],
   "homepage": "https://docsframe.work",
   "bugs": {
@@ -15,10 +17,21 @@
     "url": "https://github.com/skredev/docsframe.git",
     "directory": "packages/cli"
   },
-  "main": "index.ts",
+  "files": [
+    "src"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
+  "main": "./dist/index.ts",
   "author": "skredev",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "tsup": "^8.3.0"
+  }
 }
