--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "knip": "knip"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
@@ -75,12 +76,13 @@
     "@content-collections/core": "^0.7.1",
     "@content-collections/mdx": "^0.1.5",
     "@content-collections/next": "^0.2.2",
-    "@types/node": "^20.8.9",
+    "@types/node": "^20.16.11",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/unist": "^3.0.2",
     "eslint": "^8.55.0",
     "eslint-config-next": "^13.3.0",
+    "knip": "^5.34.0",
     "mdast-util-toc": "^6.1.1",
     "prettier": "^3.3.3",
     "rehype-autolink-headings": "^7.1.0",
@@ -94,7 +96,7 @@
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.11.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.6.3",
     "unist-builder": "4.0.0",
     "unist-util-visit": "^5.0.0"
   }
