--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,12 +1,12 @@
 {
   "name": "docsframe",
   "version": "0.0.1",
+  "description": "A simple documentation framework with shadcn/ui",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "bin": "./dist/index.js",
-  "type": "module",
   "files": [
-    "dist"
+    "dist/**/*"
   ],
   "repository": {
     "type": "git",
@@ -14,32 +14,35 @@
     "directory": "packages/cli"
   },
   "homepage": "https://docsframe.work",
+  "bugs": {
+    "url": "https://github.com/skredev/docsframe/issues"
+  },
   "keywords": [
     "components",
-    "ui",
-    "tailwind",
-    "shadcn",
     "documentation",
-    "docs"
+    "docs",
+    "shadcn",
+    "tailwind",
+    "ui"
   ],
   "author": "skre",
   "license": "MIT",
-  "description": "A simple documentation framework with shadcn/ui",
-  "scripts": {
-    "lint": "tsc --noEmit",
-    "dev": "tsup --watch",
-    "build": "tsup",
-    "deploy:package": "npm publish"
-  },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "fs-extra": "^11.1.1",
     "gradient-string": "^2.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.6",
     "@types/fs-extra": "^11.0.4",
-    "typescript": "^5.3.3",
-    "tsup": "^8.0.1"
-  }
+    "@types/node": "^20.11.6",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "build": "tsup",
+    "deploy:package": "npm publish",
+    "dev": "tsup --watch",
+    "lint": "tsc --noEmit"
+  },
+  "type": "module"
 }
