--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,9 +2,17 @@
   "name": "docsframe",
   "version": "0.0.1",
   "description": "A simple documentation framework with shadcn/ui",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "bin": "./dist/index.js",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist/**/*"
   ],
@@ -29,8 +37,7 @@
   "license": "MIT",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "fs-extra": "^11.1.1",
-    "gradient-string": "^2.0.2"
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
