--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,30 +1,12 @@
 {
   "name": "docsframe",
-  "version": "0.0.1",
   "description": "A simple documentation framework with shadcn/ui",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "version": "0.0.1",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "bin": "./dist/index.js",
-  "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist/**/*"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/skredev/docsframe",
-    "directory": "packages/cli"
-  },
-  "homepage": "https://docsframe.work",
-  "bugs": {
-    "url": "https://github.com/skredev/docsframe/issues"
-  },
+  "type": "module",
+  "license": "MIT",
   "keywords": [
     "components",
     "documentation",
@@ -33,8 +15,22 @@
     "tailwind",
     "ui"
   ],
-  "author": "skre",
-  "license": "MIT",
+  "files": [
+    "dist",
+    "template"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skredev/docsframe",
+    "directory": "packages/cli"
+  },
+  "homepage": "https://docsframe.work",
+  "scripts": {
+    "build": "tsup",
+    "deploy:package": "npm publish",
+    "dev": "tsup --watch",
+    "lint": "tsc --noEmit"
+  },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "fs-extra": "^11.1.1"
@@ -44,12 +40,5 @@
     "@types/node": "^20.11.6",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
-  },
-  "scripts": {
-    "build": "tsup",
-    "deploy:package": "npm publish",
-    "dev": "tsup --watch",
-    "lint": "tsc --noEmit"
-  },
-  "type": "module"
+  }
 }
