--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "strictNullChecks": true,
     "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "declaration": true,
     "isolatedModules": true,
     "noEmit": true
