feat(package): add new components to mdx-components

--- a/packages/docsframe/templates/components/components.json
+++ b/packages/docsframe/templates/components/components.json
@@ -1,6 +1,7 @@
 [
   {
     "name": "linkedcards",
-    "dependencies": ["react"]
+    "dependencies": ["react"],
+    "exports": ["LinkedCards", "LinkedCardItem"]
   }
 ]
