--- a/package.json
+++ b/package.json
@@ -40,25 +40,18 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@types/lodash.template": "^4.5.3",
     "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
-    "jotai": "^2.10.0",
-    "lodash.template": "^4.5.0",
     "next-themes": "^0.3.0",
-    "posthog-js": "^1.144.2",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.12.7",
-    "rimraf": "^6.0.1",
     "sonner": "^1.5.0",
-    "ts-morph": "^23.0.0",
     "tsx": "^4.19.1",
-    "vaul": "^1.0.0",
-    "zod": "^3.23.8"
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
     "@content-collections/core": "^0.7.2",
@@ -89,7 +82,6 @@
     "remark": "^14.0.3",
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^4.0.0",
-    "rimraf": "^5.0.7",
     "shiki": "^1.22.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "3.4.1",
