feat(package): add callout component

--- a/packages/docsframe/templates/components/components.json
+++ b/packages/docsframe/templates/components/components.json
@@ -1,7 +1,7 @@
 [
   {
-    "name": "linkedcards",
-    "dependencies": ["react"],
-    "exports": ["LinkedCards", "LinkedCardItem"]
+    "name": "callout",
+    "dependencies": [""],
+    "exports": ["Callout"]
   }
 ]
