--- a/package.json
+++ b/package.json
@@ -15,43 +15,10 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
     "cmdk": "^1.0.0",
-    "date-fns": "^2.30.0",
-    "embla-carousel-react": "^8.3.0",
-    "input-otp": "^1.2.4",
     "next-themes": "^0.3.0",
-    "react-day-picker": "^8.10.1",
-    "react-hook-form": "^7.53.0",
-    "react-resizable-panels": "^2.1.4",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tsx": "^4.19.1",
-    "vaul": "^1.0.0"
+    "tsx": "^4.19.1"
   },
   "devDependencies": {
     "@content-collections/core": "^0.7.2",
@@ -63,7 +30,6 @@
     "@types/node": "^20.16.11",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "@types/unist": "^3.0.2",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.1.1",
     "eslint": "^8.55.0",
@@ -76,7 +42,6 @@
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "6.0.0",
     "remark": "^14.0.3",
@@ -88,7 +53,6 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.11.0",
     "typescript": "^5.6.3",
-    "unist-builder": "4.0.0",
     "unist-util-visit": "^5.0.0"
   }
 }
