--- a/package.json
+++ b/package.json
@@ -21,35 +21,35 @@
     "tsx": "^4.19.1"
   },
   "devDependencies": {
-    "@content-collections/core": "^0.7.2",
+    "@content-collections/core": "^0.7.3",
     "@content-collections/mdx": "^0.1.6",
-    "@content-collections/next": "^0.2.3",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@content-collections/next": "^0.2.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@types/node": "^20.16.11",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.1.1",
     "eslint": "^8.55.0",
     "eslint-config-next": "^13.3.0",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.17",
     "knip": "^5.34.0",
     "lucide-react": "^0.401.0",
     "mdast-util-toc": "^6.1.1",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "prettier": "^3.3.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rehype-pretty-code": "^0.13.2",
-    "rehype-slug": "6.0.0",
+    "rehype-slug": "^6.0.0",
     "remark": "^14.0.3",
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^4.0.0",
-    "shiki": "^1.22.0",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss": "3.4.1",
+    "shiki": "^1.23.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.11.0",
     "typescript": "^5.6.3",
