feat(package): add tabs component

--- a/packages/docsframe/templates/components/components.json
+++ b/packages/docsframe/templates/components/components.json
@@ -3,5 +3,10 @@
     "name": "callout",
     "dependencies": [""],
     "exports": ["Callout"]
+  },
+  {
+    "name": "tabs",
+    "dependencies": ["@radix-ui/react-tabs"],
+    "exports": ["Tabs", "TabsList", "TabsTrigger", "TabsContent"]
   }
 ]
