--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.1",
     "cmdk": "^1.0.0",
     "next-themes": "^0.3.0",
     "tsx": "^4.19.1"
