--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "cmdk": "^1.0.4",
     "next-themes": "^0.3.0",
+    "sharp": "^0.33.5",
     "tsx": "^4.19.2"
   },
   "devDependencies": {
