fix: update contributing guidelines and enhance bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -48,6 +48,7 @@ body:
         - Safari
         - Firefox Mobile
         - Safari Mobile
+        - Other (e.g. Terminal)
   - type: textarea
     id: additional-info
     attributes:
