chore: update dependencies to latest versions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "content-collections": [
         "./.content-collections/generated"
       ]
-    }
+    },
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
