--- a/package.json
+++ b/package.json
@@ -27,47 +27,47 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.2",
     "cmdk": "^1.0.4",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.4",
     "sharp": "^0.33.5",
     "tsx": "^4.19.2"
   },
   "devDependencies": {
-    "@content-collections/core": "^0.7.3",
-    "@content-collections/mdx": "^0.1.6",
+    "@content-collections/core": "^0.8.0",
+    "@content-collections/mdx": "^0.2.0",
     "@content-collections/next": "^0.2.4",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@types/node": "^20.17.7",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "class-variance-authority": "^0.6.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^13.5.7",
-    "framer-motion": "^11.11.17",
-    "knip": "^5.37.2",
-    "lucide-react": "^0.401.0",
-    "mdast-util-toc": "^6.1.1",
-    "next": "^14.2.18",
-    "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rehype-pretty-code": "^0.13.2",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.4",
+    "framer-motion": "^11.17.0",
+    "knip": "^5.42.0",
+    "lucide-react": "^0.471.0",
+    "mdast-util-toc": "^7.1.0",
+    "next": "^15.1.4",
+    "prettier": "^3.4.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
-    "remark": "^14.0.3",
+    "remark": "^15.0.1",
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^4.0.0",
-    "shiki": "^1.23.1",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.15",
+    "shiki": "^1.26.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.11.0",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "unist-util-visit": "^5.0.0"
   }
 }
